# wordlver

./: .flake8  .pre-commit-config.yaml  LICENSE.md  README.md  main.py  mypy.ini  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yml
tests/: test_constants.py
wordlver/: __init__.py  _character_commonality.py  _constants.py  _find_most_common.py  _word_finder.py
