[tool.poetry]
name = "wordlver"
version = "0.1.0"
description = ""
authors = ["Adrian de Anda <me@adriandeanda.com>"]

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.dev-dependencies]
pre-commit = "2.17.0"
pytest = "6.2.5"
pytest-sugar = "0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
